--- a/index.html
+++ b/index.html
@@ -134,65 +134,63 @@
             gap: 0.2em;
         }
 
-        /* Rotating word animation like maxbestene.github.io */
-        .rotating-word {
+        /* Animated Words Container */
+        .animated-word-container {
             display: inline-block;
-            font-size: 80px;
-            font-weight: 700;
-            line-height: 90px;
-            letter-spacing: -3.2px;
-            color: rgba(0,0,0,0.9);
-            transform-origin: center;
-            perspective: 1000px;
-            animation: rotateWord 8s infinite ease-in-out;
+            height: 100px; /* Aumentado para acomodar descenders (j, g) */
+            overflow: hidden;
+            position: relative;
+            margin-top: -10px; /* Compensa altura extra para manter entrelinha original */
         }
 
-        /* Rotating word animation with text change */
-        @keyframes rotateWord {
-            0%, 23% { 
-                transform: rotateY(0deg);
-                opacity: 1;
-            }
-            25% { 
-                transform: rotateY(90deg);
-                opacity: 0;
-            }
-            27% { 
-                transform: rotateY(90deg);
-                opacity: 0;
-            }
-            29%, 48% { 
-                transform: rotateY(0deg);
-                opacity: 1;
-            }
-            50% { 
-                transform: rotateY(90deg);
-                opacity: 0;
-            }
-            52% { 
-                transform: rotateY(90deg);
-                opacity: 0;
-            }
-            54%, 73% { 
-                transform: rotateY(0deg);
-                opacity: 1;
-            }
-            75% { 
-                transform: rotateY(90deg);
-                opacity: 0;
-            }
-            77% { 
-                transform: rotateY(90deg);
-                opacity: 0;
-            }
-            79%, 98% { 
-                transform: rotateY(0deg);
-                opacity: 1;
-            }
-            100% { 
-                transform: rotateY(90deg);
-                opacity: 0;
-            }
+        .animated-words {
+            animation: wordSlide 12s infinite;
+            animation-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94); /* Gentle easing similar to Figma */
+            transform: translateY(0);
+        }
+
+        .word-item {
+            height: 100px; /* Aumentado para acomodar descenders */
+            margin-bottom: 20px; /* 20px de distância entre palavras */
+            display: flex;
+            align-items: center; /* Vertical: centralizado */
+            justify-content: flex-start; /* Horizontal: alinhado à esquerda */
+            font-size: 80px;
+            font-weight: 700;
+            line-height: 90px; /* Aumentado para dar espaço aos descenders */
+            letter-spacing: -3.2px;
+            color: rgba(0,0,0,0.9);
+        }
+
+        @keyframes wordSlide {
+            0% { transform: translateY(0); }
+            22% { transform: translateY(0); }
+            24% { transform: translateY(-6px); } /* Primeiro micro movimento - ultra suave */
+            25.5% { transform: translateY(-114px); } /* Ligeiramente abaixo - movimento mais lento */
+            26.5% { transform: translateY(-126px); } /* Ligeiramente acima */
+            27.5% { transform: translateY(-120px); } /* Posição intermediária */
+            28.5% { transform: translateY(-117px); } /* Segundo micro movimento - abaixo - ultra suave */
+            29.5% { transform: translateY(-123px); } /* Segundo micro movimento - acima - ultra suave */
+            30.5% { transform: translateY(-120px); } /* Posição final estabilizada - ultra suave */
+            47% { transform: translateY(-120px); }
+            49% { transform: translateY(-126px); } /* Primeiro micro movimento - ultra suave */
+            50.5% { transform: translateY(-234px); } /* Ligeiramente abaixo - movimento mais lento */
+            51.5% { transform: translateY(-246px); } /* Ligeiramente acima */
+            52.5% { transform: translateY(-240px); } /* Posição intermediária */
+            53.5% { transform: translateY(-237px); } /* Segundo micro movimento - abaixo - ultra suave */
+            54.5% { transform: translateY(-243px); } /* Segundo micro movimento - acima - ultra suave */
+            55.5% { transform: translateY(-240px); } /* Posição final estabilizada - ultra suave */
+            72% { transform: translateY(-240px); }
+            74% { transform: translateY(-246px); } /* Primeiro micro movimento - ultra suave */
+            75.5% { transform: translateY(-354px); } /* Ligeiramente abaixo - movimento mais lento */
+            76.5% { transform: translateY(-366px); } /* Ligeiramente acima */
+            77.5% { transform: translateY(-360px); } /* Posição intermediária */
+            78.5% { transform: translateY(-357px); } /* Segundo micro movimento - abaixo - ultra suave */
+            79.5% { transform: translateY(-363px); } /* Segundo micro movimento - acima - ultra suave */
+            80.5% { transform: translateY(-360px); } /* Posição final estabilizada - ultra suave */
+            97% { transform: translateY(-360px); }
+            99% { transform: translateY(-366px); } /* Primeiro micro movimento - ultra suave */
+            100% { transform: translateY(-480px); } /* Posição final (loop) */
         }
 
         .hero-subtitle {
@@ -1313,7 +1311,18 @@
                 <div class="hero-text">
                     <h1 class="hero-title">
                         Creditos para impulsar tu 
-                        <span id="animated-word" class="rotating-word">negócio</span>
+                        <div class="animated-word-container">
+                            <div class="animated-words">
+                                <div class="word-item">negócio</div>
+                                <div class="word-item">tienda</div>
+                                <div class="word-item">lojinha</div>
+                                <div class="word-item">mercado</div>
+                                <div class="word-item">negócio</div>
+                                <div class="word-item">tienda</div>
+                                <div class="word-item">lojinha</div>
+                                <div class="word-item">mercado</div>
+                            </div>
+                        </div>
                     </h1>
                     <p class="hero-subtitle">Simula tu crédito y obtén el dinero al instante.</p>
                     <a href="#productos" class="hero-cta">Simular crédito</a>
@@ -1871,22 +1880,6 @@
         let currentActiveCard = null;
 
         // Scroll to card function com toggle - volta para posição onde card fica totalmente visível
-        // Rotating word functionality like maxbestene.github.io
-        const words = ['negócio', 'tienda', 'lojinha', 'mercado'];
-        let currentWordIndex = 0;
-        const animatedWord = document.getElementById('animated-word');
-        
-        function rotateWord() {
-            // Wait for rotation animation to hide the word
-            setTimeout(() => {
-                currentWordIndex = (currentWordIndex + 1) % words.length;
-                animatedWord.textContent = words[currentWordIndex];
-            }, 400); // Change word when opacity is 0 (middle of rotation)
-        }
-        
-        // Change word every 2 seconds (aligned with CSS animation)
-        setInterval(rotateWord, 2000);
-
         // Intersection Observer para animação dos títulos
         const animatedTitles = [
             document.getElementById('products-title'),
