⏱️ TIMING UNIFORME: Transição 'mercado→lojinha' agora tem mesma velocidade das outras (92-100%)

--- a/index.html
+++ b/index.html
@@ -191,9 +191,14 @@
             78.5% { transform: translateY(-357px); } /* Segundo micro movimento - abaixo - ultra suave */
             79.5% { transform: translateY(-363px); } /* Segundo micro movimento - acima - ultra suave */
             80.5% { transform: translateY(-360px); } /* Posição final estabilizada - ultra suave */
-            97% { transform: translateY(-360px); }
-            99% { transform: translateY(-366px); } /* Primeiro micro movimento - ultra suave */
-            100% { transform: translateY(-480px); } /* Posição final (loop) */
+            92% { transform: translateY(-360px); }
+            94% { transform: translateY(-366px); } /* Primeiro micro movimento - ultra suave */
+            95.5% { transform: translateY(-474px); } /* Ligeiramente abaixo - movimento mais lento */
+            96.5% { transform: translateY(-486px); } /* Ligeiramente acima */
+            97.5% { transform: translateY(-480px); } /* Posição intermediária */
+            98.5% { transform: translateY(-477px); } /* Segundo micro movimento - abaixo - ultra suave */
+            99.5% { transform: translateY(-483px); } /* Segundo micro movimento - acima - ultra suave */
+            100% { transform: translateY(-480px); } /* Posição final estabilizada - ultra suave */
         }
 
         .hero-subtitle {
