--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
         }
 
         .animated-words {
-            animation: wordSlide 12s infinite;
-            animation-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94); /* Gentle easing similar to Figma */
+            animation: wordSlide 16s infinite;
+            animation-timing-function: cubic-bezier(0.23, 1, 0.32, 1); /* Ultra smooth easing */
             transform: translateY(0);
         }
 
@@ -163,41 +163,41 @@
         }
 
         @keyframes wordSlide {
-            0% { transform: translateY(-6px); } /* Inicia com micro movimento */
-            1% { transform: translateY(6px); } /* Ligeiramente abaixo */
-            2% { transform: translateY(-3px); } /* Ligeiramente acima */
-            3% { transform: translateY(0); } /* Se acomoda na posição inicial */
+            0% { transform: translateY(-4px); } /* Inicia com micro movimento mais suave */
+            1.5% { transform: translateY(4px); } /* Ligeiramente abaixo - mais tempo */
+            3% { transform: translateY(-2px); } /* Ligeiramente acima - mais tempo */
+            4.5% { transform: translateY(0); } /* Se acomoda na posição inicial - mais tempo */
             22% { transform: translateY(0); }
-            24% { transform: translateY(-6px); } /* Primeiro micro movimento - ultra suave */
-            25.5% { transform: translateY(-114px); } /* Ligeiramente abaixo - movimento mais lento */
-            26.5% { transform: translateY(-126px); } /* Ligeiramente acima */
-            27.5% { transform: translateY(-120px); } /* Posição intermediária */
-            28.5% { transform: translateY(-117px); } /* Segundo micro movimento - abaixo - ultra suave */
-            29.5% { transform: translateY(-123px); } /* Segundo micro movimento - acima - ultra suave */
-            30.5% { transform: translateY(-120px); } /* Posição final estabilizada - ultra suave */
+            23.5% { transform: translateY(-4px); } /* Primeiro micro movimento - ultra suave */
+            25% { transform: translateY(-116px); } /* Ligeiramente abaixo - movimento mais lento */
+            26.5% { transform: translateY(-124px); } /* Ligeiramente acima - mais tempo */
+            28% { transform: translateY(-120px); } /* Posição intermediária - mais tempo */
+            29% { transform: translateY(-118px); } /* Segundo micro movimento - abaixo - ultra suave */
+            30% { transform: translateY(-122px); } /* Segundo micro movimento - acima - ultra suave */
+            31% { transform: translateY(-120px); } /* Posição final estabilizada - ultra suave */
             47% { transform: translateY(-120px); }
-            49% { transform: translateY(-126px); } /* Primeiro micro movimento - ultra suave */
-            50.5% { transform: translateY(-234px); } /* Ligeiramente abaixo - movimento mais lento */
-            51.5% { transform: translateY(-246px); } /* Ligeiramente acima */
-            52.5% { transform: translateY(-240px); } /* Posição intermediária */
-            53.5% { transform: translateY(-237px); } /* Segundo micro movimento - abaixo - ultra suave */
-            54.5% { transform: translateY(-243px); } /* Segundo micro movimento - acima - ultra suave */
-            55.5% { transform: translateY(-240px); } /* Posição final estabilizada - ultra suave */
+            48.5% { transform: translateY(-124px); } /* Primeiro micro movimento - ultra suave */
+            50% { transform: translateY(-236px); } /* Ligeiramente abaixo - movimento mais lento */
+            51.5% { transform: translateY(-244px); } /* Ligeiramente acima - mais tempo */
+            53% { transform: translateY(-240px); } /* Posição intermediária - mais tempo */
+            54% { transform: translateY(-238px); } /* Segundo micro movimento - abaixo - ultra suave */
+            55% { transform: translateY(-242px); } /* Segundo micro movimento - acima - ultra suave */
+            56% { transform: translateY(-240px); } /* Posição final estabilizada - ultra suave */
             72% { transform: translateY(-240px); }
-            74% { transform: translateY(-246px); } /* Primeiro micro movimento - ultra suave */
-            75.5% { transform: translateY(-354px); } /* Ligeiramente abaixo - movimento mais lento */
-            76.5% { transform: translateY(-366px); } /* Ligeiramente acima */
-            77.5% { transform: translateY(-360px); } /* Posição intermediária */
-            78.5% { transform: translateY(-357px); } /* Segundo micro movimento - abaixo - ultra suave */
-            79.5% { transform: translateY(-363px); } /* Segundo micro movimento - acima - ultra suave */
-            80.5% { transform: translateY(-360px); } /* Posição final estabilizada - ultra suave */
+            73.5% { transform: translateY(-244px); } /* Primeiro micro movimento - ultra suave */
+            75% { transform: translateY(-356px); } /* Ligeiramente abaixo - movimento mais lento */
+            76.5% { transform: translateY(-364px); } /* Ligeiramente acima - mais tempo */
+            78% { transform: translateY(-360px); } /* Posição intermediária - mais tempo */
+            79% { transform: translateY(-358px); } /* Segundo micro movimento - abaixo - ultra suave */
+            80% { transform: translateY(-362px); } /* Segundo micro movimento - acima - ultra suave */
+            81% { transform: translateY(-360px); } /* Posição final estabilizada - ultra suave */
             92% { transform: translateY(-360px); }
-            94% { transform: translateY(-366px); } /* Primeiro micro movimento - ultra suave */
-            95.5% { transform: translateY(-474px); } /* Ligeiramente abaixo - movimento mais lento */
-            96.5% { transform: translateY(-486px); } /* Ligeiramente acima */
-            97.5% { transform: translateY(-480px); } /* Posição intermediária */
-            98.5% { transform: translateY(-477px); } /* Segundo micro movimento - abaixo - ultra suave */
-            99.5% { transform: translateY(-483px); } /* Segundo micro movimento - acima - ultra suave */
+            93.5% { transform: translateY(-364px); } /* Primeiro micro movimento - ultra suave */
+            95% { transform: translateY(-476px); } /* Ligeiramente abaixo - movimento mais lento */
+            96.5% { transform: translateY(-484px); } /* Ligeiramente acima - mais tempo */
+            98% { transform: translateY(-480px); } /* Posição intermediária - mais tempo */
+            99% { transform: translateY(-478px); } /* Segundo micro movimento - abaixo - ultra suave */
+            99.5% { transform: translateY(-482px); } /* Segundo micro movimento - acima - ultra suave */
             100% { transform: translateY(-480px); } /* Posição final estabilizada - ultra suave */
         }
 
