--- a/index.html
+++ b/index.html
@@ -166,23 +166,20 @@
             0% { transform: translateY(-2px); } /* Inicia suave */
             1% { transform: translateY(2px); } /* Assentamento rápido */
             2% { transform: translateY(0); } /* Se acomoda */
-            18% { transform: translateY(0); } /* Menos tempo parado */
-            20% { transform: translateY(-118px); } /* Transição direta */
-            21% { transform: translateY(-122px); } /* Micro ajuste */
-            22% { transform: translateY(-120px); } /* Posição final */
-            43% { transform: translateY(-120px); } /* Menos tempo parado */
-            45% { transform: translateY(-238px); } /* Transição direta */
-            46% { transform: translateY(-242px); } /* Micro ajuste */
-            47% { transform: translateY(-240px); } /* Posição final */
-            68% { transform: translateY(-240px); } /* Menos tempo parado */
-            70% { transform: translateY(-358px); } /* Transição direta */
-            71% { transform: translateY(-362px); } /* Micro ajuste */
-            72% { transform: translateY(-360px); } /* Posição final */
-            93% { transform: translateY(-360px); } /* Menos tempo parado */
-            95% { transform: translateY(-478px); } /* Transição direta */
-            96% { transform: translateY(-482px); } /* Micro ajuste */
-            97% { transform: translateY(-480px); } /* Posição final */
-            100% { transform: translateY(-480px); } /* Loop */
+            23% { transform: translateY(0); } /* Tempo para exibir palavra */
+            25% { transform: translateY(-118px); } /* Transição para "tienda" */
+            26% { transform: translateY(-122px); } /* Micro ajuste */
+            27% { transform: translateY(-120px); } /* Posição final */
+            48% { transform: translateY(-120px); } /* Tempo para exibir palavra */
+            50% { transform: translateY(-238px); } /* Transição para "lojinha" */
+            51% { transform: translateY(-242px); } /* Micro ajuste */
+            52% { transform: translateY(-240px); } /* Posição final */
+            73% { transform: translateY(-240px); } /* Tempo para exibir palavra */
+            75% { transform: translateY(-358px); } /* Transição para "mercado" */
+            76% { transform: translateY(-362px); } /* Micro ajuste */
+            77% { transform: translateY(-360px); } /* Posição final */
+            98% { transform: translateY(-360px); } /* Tempo para exibir palavra */
+            100% { transform: translateY(-480px); } /* Loop de volta para "negócio" */
         }
 
         .hero-subtitle {
@@ -1305,10 +1302,6 @@
                         Creditos para impulsar tu 
                         <div class="animated-word-container">
                             <div class="animated-words">
-                                <div class="word-item">negócio</div>
-                                <div class="word-item">tienda</div>
-                                <div class="word-item">lojinha</div>
-                                <div class="word-item">mercado</div>
                                 <div class="word-item">negócio</div>
                                 <div class="word-item">tienda</div>
                                 <div class="word-item">lojinha</div>
