--- a/index.html
+++ b/index.html
@@ -165,21 +165,25 @@
         @keyframes wordSlide {
             0% { transform: translateY(-2px); } /* Inicia suave */
             1% { transform: translateY(2px); } /* Assentamento rápido */
-            2% { transform: translateY(0); } /* Se acomoda */
-            23% { transform: translateY(0); } /* Tempo para exibir palavra */
-            25% { transform: translateY(-118px); } /* Transição para "tienda" */
-            26% { transform: translateY(-122px); } /* Micro ajuste */
-            27% { transform: translateY(-120px); } /* Posição final */
-            48% { transform: translateY(-120px); } /* Tempo para exibir palavra */
-            50% { transform: translateY(-238px); } /* Transição para "lojinha" */
-            51% { transform: translateY(-242px); } /* Micro ajuste */
-            52% { transform: translateY(-240px); } /* Posição final */
-            73% { transform: translateY(-240px); } /* Tempo para exibir palavra */
-            75% { transform: translateY(-358px); } /* Transição para "mercado" */
-            76% { transform: translateY(-362px); } /* Micro ajuste */
-            77% { transform: translateY(-360px); } /* Posição final */
-            98% { transform: translateY(-360px); } /* Tempo para exibir palavra */
-            100% { transform: translateY(-480px); } /* Loop de volta para "negócio" */
+            2% { transform: translateY(0); } /* Se acomoda - negócio */
+            18% { transform: translateY(0); } /* Tempo para exibir palavra */
+            20% { transform: translateY(-118px); } /* Transição para "tienda" */
+            21% { transform: translateY(-122px); } /* Micro ajuste */
+            22% { transform: translateY(-120px); } /* Posição final */
+            38% { transform: translateY(-120px); } /* Tempo para exibir palavra */
+            40% { transform: translateY(-238px); } /* Transição para "lojinha" */
+            41% { transform: translateY(-242px); } /* Micro ajuste */
+            42% { transform: translateY(-240px); } /* Posição final */
+            58% { transform: translateY(-240px); } /* Tempo para exibir palavra */
+            60% { transform: translateY(-358px); } /* Transição para "mercado" */
+            61% { transform: translateY(-362px); } /* Micro ajuste */
+            62% { transform: translateY(-360px); } /* Posição final */
+            78% { transform: translateY(-360px); } /* Tempo para exibir palavra */
+            80% { transform: translateY(-478px); } /* Transição para "negócio" duplicado */
+            81% { transform: translateY(-482px); } /* Micro ajuste */
+            82% { transform: translateY(-480px); } /* Posição final */
+            98% { transform: translateY(-480px); } /* Tempo para exibir palavra */
+            100% { transform: translateY(-480px); } /* Mantém posição no final */
         }
 
         .hero-subtitle {
@@ -1306,6 +1310,7 @@
                                 <div class="word-item">tienda</div>
                                 <div class="word-item">lojinha</div>
                                 <div class="word-item">mercado</div>
+                                <div class="word-item">negócio</div>
                             </div>
                         </div>
                     </h1>
