--- a/index.html
+++ b/index.html
@@ -179,10 +179,8 @@
             61% { transform: translateY(-362px); } /* Micro ajuste */
             62% { transform: translateY(-360px); } /* Posição final */
             78% { transform: translateY(-360px); } /* Tempo para exibir palavra */
-            80% { transform: translateY(-478px); } /* Transição para "negócio" duplicado */
-            81% { transform: translateY(-482px); } /* Micro ajuste */
-            82% { transform: translateY(-480px); } /* Posição final */
-            98% { transform: translateY(-480px); } /* Tempo para exibir palavra */
+            80% { transform: translateY(-480px); } /* Transição direta para "negócio" duplicado */
+            98% { transform: translateY(-480px); } /* Tempo para exibir palavra - SEM settling */
             100% { transform: translateY(-480px); } /* Mantém posição no final */
         }
 
