⚡ PRIMEIRA PALAVRA RÁPIDA: Reduzido tempo 'negócio' inicial de 18% para 12% para início mais dinâmico

--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
 
         @keyframes wordSlide {
             0% { transform: translateY(0); } /* Inicia estático - negócio primeira vez */
-            18% { transform: translateY(0); } /* Tempo para exibir palavra */
-            20% { transform: translateY(-118px); } /* Transição para "tienda" */
-            21% { transform: translateY(-122px); } /* Micro ajuste */
-            22% { transform: translateY(-120px); } /* Posição final */
+            12% { transform: translateY(0); } /* Menos tempo parado */
+            14% { transform: translateY(-118px); } /* Transição para "tienda" */
+            15% { transform: translateY(-122px); } /* Micro ajuste */
+            16% { transform: translateY(-120px); } /* Posição final */
             38% { transform: translateY(-120px); } /* Tempo para exibir palavra */
             40% { transform: translateY(-238px); } /* Transição para "lojinha" */
             41% { transform: translateY(-242px); } /* Micro ajuste */
