⚖️ TEMPO EQUILIBRADO: Segunda palavra 'negócio' reduzida para 8% (12%+8%=20% total = outras palavras)

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             80% { transform: translateY(-478px); } /* Transição para "negócio" no giro */
             81% { transform: translateY(-482px); } /* Micro ajuste - settling no giro */
             82% { transform: translateY(-480px); } /* Posição final COM settling */
-            98% { transform: translateY(-480px); } /* Tempo para exibir palavra */
+            90% { transform: translateY(-480px); } /* Menos tempo para segunda palavra negócio */
             100% { transform: translateY(-480px); } /* Mantém posição no final */
         }
 
