🔄 TIMING BALANCEADO: Primeira 'negócio' +50% tempo (18%) + Segunda 'negócio' -50% tempo (3%)

--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
 
         @keyframes wordSlide {
             0% { transform: translateY(0); } /* Inicia estático - negócio primeira vez */
-            12% { transform: translateY(0); } /* Menos tempo parado */
-            14% { transform: translateY(-118px); } /* Transição para "tienda" */
-            15% { transform: translateY(-122px); } /* Micro ajuste */
-            16% { transform: translateY(-120px); } /* Posição final */
+            18% { transform: translateY(0); } /* MAIS tempo parado */
+            20% { transform: translateY(-118px); } /* Transição para "tienda" */
+            21% { transform: translateY(-122px); } /* Micro ajuste */
+            22% { transform: translateY(-120px); } /* Posição final */
             38% { transform: translateY(-120px); } /* Tempo para exibir palavra */
             40% { transform: translateY(-238px); } /* Transição para "lojinha" */
             41% { transform: translateY(-242px); } /* Micro ajuste */
@@ -180,7 +180,7 @@
             80% { transform: translateY(-478px); } /* Transição para "negócio" no giro */
             81% { transform: translateY(-482px); } /* Micro ajuste - settling no giro */
             82% { transform: translateY(-480px); } /* Posição final COM settling */
-            88% { transform: translateY(-480px); } /* MUITO menos tempo para segunda palavra negócio */
+            85% { transform: translateY(-480px); } /* MUITO POUCO tempo para segunda palavra negócio */
             100% { transform: translateY(-480px); } /* Mantém posição no final */
         }
 
