--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             80% { transform: translateY(-478px); } /* Transição para "negócio" no giro */
             81% { transform: translateY(-482px); } /* Micro ajuste - settling no giro */
             82% { transform: translateY(-480px); } /* Posição final COM settling */
-            83.5% { transform: translateY(-480px); } /* MÍNIMO tempo para segunda palavra negócio */
+            82.5% { transform: translateY(-480px); } /* FLASH rápido da segunda palavra negócio */
             100% { transform: translateY(-480px); } /* Mantém posição no final */
         }
 
@@ -769,7 +769,7 @@
             left: 60px;
             opacity: 1;
             width: 242px;
-            height: 80px;
+            height: 68px;
         }
 
         .reputation-card {
