--- a/index.html
+++ b/index.html
@@ -163,25 +163,29 @@
         }
 
         @keyframes wordSlide {
-            0% { transform: translateY(0); } /* Inicia estático - negócio primeira vez */
-            18% { transform: translateY(0); } /* MAIS tempo parado */
-            20% { transform: translateY(-118px); } /* Transição para "tienda" */
-            21% { transform: translateY(-122px); } /* Micro ajuste */
-            22% { transform: translateY(-120px); } /* Posição final */
-            38% { transform: translateY(-120px); } /* Tempo para exibir palavra */
-            40% { transform: translateY(-238px); } /* Transição para "lojinha" */
-            41% { transform: translateY(-242px); } /* Micro ajuste */
-            42% { transform: translateY(-240px); } /* Posição final */
-            58% { transform: translateY(-240px); } /* Tempo para exibir palavra */
-            60% { transform: translateY(-358px); } /* Transição para "mercado" */
-            61% { transform: translateY(-362px); } /* Micro ajuste */
-            62% { transform: translateY(-360px); } /* Posição final */
-            78% { transform: translateY(-360px); } /* Tempo para exibir palavra */
-            80% { transform: translateY(-478px); } /* Transição para "negócio" no giro */
-            81% { transform: translateY(-482px); } /* Micro ajuste - settling no giro */
-            82% { transform: translateY(-480px); } /* Posição final COM settling */
-            82.5% { transform: translateY(-480px); } /* FLASH rápido da segunda palavra negócio */
-            100% { transform: translateY(-480px); } /* Mantém posição no final */
+            0% { transform: translateY(0); opacity: 1; } /* Inicia estático - negócio primeira vez */
+            18% { transform: translateY(0); opacity: 1; } /* MAIS tempo parado */
+            19% { transform: translateY(0); opacity: 0.3; } /* Fade out antes de subir */
+            20% { transform: translateY(-118px); opacity: 0.3; } /* Transição para "tienda" */
+            21% { transform: translateY(-122px); opacity: 0.8; } /* Micro ajuste + fade in */
+            22% { transform: translateY(-120px); opacity: 1; } /* Posição final + totalmente visível */
+            38% { transform: translateY(-120px); opacity: 1; } /* Tempo para exibir palavra */
+            39% { transform: translateY(-120px); opacity: 0.3; } /* Fade out antes de subir */
+            40% { transform: translateY(-238px); opacity: 0.3; } /* Transição para "lojinha" */
+            41% { transform: translateY(-242px); opacity: 0.8; } /* Micro ajuste + fade in */
+            42% { transform: translateY(-240px); opacity: 1; } /* Posição final + totalmente visível */
+            58% { transform: translateY(-240px); opacity: 1; } /* Tempo para exibir palavra */
+            59% { transform: translateY(-240px); opacity: 0.3; } /* Fade out antes de subir */
+            60% { transform: translateY(-358px); opacity: 0.3; } /* Transição para "mercado" */
+            61% { transform: translateY(-362px); opacity: 0.8; } /* Micro ajuste + fade in */
+            62% { transform: translateY(-360px); opacity: 1; } /* Posição final + totalmente visível */
+            78% { transform: translateY(-360px); opacity: 1; } /* Tempo para exibir palavra */
+            79% { transform: translateY(-360px); opacity: 0.3; } /* Fade out antes de subir */
+            80% { transform: translateY(-478px); opacity: 0.3; } /* Transição para "negócio" no giro */
+            81% { transform: translateY(-482px); opacity: 0.8; } /* Micro ajuste + fade in */
+            82% { transform: translateY(-480px); opacity: 1; } /* Posição final + totalmente visível */
+            82.5% { transform: translateY(-480px); opacity: 1; } /* FLASH rápido da segunda palavra negócio */
+            100% { transform: translateY(-480px); opacity: 1; } /* Mantém posição no final */
         }
 
         .hero-subtitle {
