--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         }
 
         .animated-words {
-            animation: wordSlide 20s infinite;
+            animation: wordSlide 28s infinite;
             animation-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94); /* Smooth easing */
             transform: translateY(0);
         }
@@ -164,27 +164,27 @@
 
         @keyframes wordSlide {
             0% { transform: translateY(0); opacity: 1; } /* Inicia estático - negócio primeira vez */
-            18% { transform: translateY(0); opacity: 1; } /* MAIS tempo parado */
-            19% { transform: translateY(0); opacity: 0.3; } /* Fade out antes de subir */
-            20% { transform: translateY(-118px); opacity: 0.3; } /* Transição para "tienda" */
-            21% { transform: translateY(-122px); opacity: 0.8; } /* Micro ajuste + fade in */
+            12% { transform: translateY(0); opacity: 1; } /* Menos tempo parado */
+            14% { transform: translateY(0); opacity: 0.3; } /* Fade out antes de subir */
+            18% { transform: translateY(-118px); opacity: 0.3; } /* Transição mais lenta para "tienda" */
+            20% { transform: translateY(-122px); opacity: 0.8; } /* Micro ajuste + fade in */
             22% { transform: translateY(-120px); opacity: 1; } /* Posição final + totalmente visível */
-            38% { transform: translateY(-120px); opacity: 1; } /* Tempo para exibir palavra */
-            39% { transform: translateY(-120px); opacity: 0.3; } /* Fade out antes de subir */
-            40% { transform: translateY(-238px); opacity: 0.3; } /* Transição para "lojinha" */
-            41% { transform: translateY(-242px); opacity: 0.8; } /* Micro ajuste + fade in */
-            42% { transform: translateY(-240px); opacity: 1; } /* Posição final + totalmente visível */
-            58% { transform: translateY(-240px); opacity: 1; } /* Tempo para exibir palavra */
-            59% { transform: translateY(-240px); opacity: 0.3; } /* Fade out antes de subir */
-            60% { transform: translateY(-358px); opacity: 0.3; } /* Transição para "mercado" */
-            61% { transform: translateY(-362px); opacity: 0.8; } /* Micro ajuste + fade in */
-            62% { transform: translateY(-360px); opacity: 1; } /* Posição final + totalmente visível */
-            78% { transform: translateY(-360px); opacity: 1; } /* Tempo para exibir palavra */
-            79% { transform: translateY(-360px); opacity: 0.3; } /* Fade out antes de subir */
-            80% { transform: translateY(-478px); opacity: 0.3; } /* Transição para "negócio" no giro */
-            81% { transform: translateY(-482px); opacity: 0.8; } /* Micro ajuste + fade in */
-            82% { transform: translateY(-480px); opacity: 1; } /* Posição final + totalmente visível */
-            82.5% { transform: translateY(-480px); opacity: 1; } /* FLASH rápido da segunda palavra negócio */
+            34% { transform: translateY(-120px); opacity: 1; } /* Menos tempo parado */
+            36% { transform: translateY(-120px); opacity: 0.3; } /* Fade out antes de subir */
+            40% { transform: translateY(-238px); opacity: 0.3; } /* Transição mais lenta para "lojinha" */
+            42% { transform: translateY(-242px); opacity: 0.8; } /* Micro ajuste + fade in */
+            44% { transform: translateY(-240px); opacity: 1; } /* Posição final + totalmente visível */
+            56% { transform: translateY(-240px); opacity: 1; } /* Menos tempo parado */
+            58% { transform: translateY(-240px); opacity: 0.3; } /* Fade out antes de subir */
+            62% { transform: translateY(-358px); opacity: 0.3; } /* Transição mais lenta para "mercado" */
+            64% { transform: translateY(-362px); opacity: 0.8; } /* Micro ajuste + fade in */
+            66% { transform: translateY(-360px); opacity: 1; } /* Posição final + totalmente visível */
+            78% { transform: translateY(-360px); opacity: 1; } /* Menos tempo parado */
+            80% { transform: translateY(-360px); opacity: 0.3; } /* Fade out antes de subir */
+            84% { transform: translateY(-478px); opacity: 0.3; } /* Transição mais lenta para "negócio" no giro */
+            86% { transform: translateY(-482px); opacity: 0.8; } /* Micro ajuste + fade in */
+            88% { transform: translateY(-480px); opacity: 1; } /* Posição final + totalmente visível */
+            89% { transform: translateY(-480px); opacity: 1; } /* FLASH rápido da segunda palavra negócio */
             100% { transform: translateY(-480px); opacity: 1; } /* Mantém posição no final */
         }
 
