↩️ REVERT: Voltei versão anterior - fade out ANTES do movimento (funciona melhor)

--- a/index.html
+++ b/index.html
@@ -165,27 +165,23 @@
         @keyframes wordSlide {
             0% { transform: translateY(0); opacity: 1; } /* Inicia estático - negócio primeira vez */
             12% { transform: translateY(0); opacity: 1; } /* Menos tempo parado */
-            14% { transform: translateY(-59px); opacity: 1; } /* Movimento começa, opacidade ainda total */
-            16% { transform: translateY(-118px); opacity: 0.3; } /* Fade out DEPOIS do movimento */
-            18% { transform: translateY(-118px); opacity: 0.3; } /* Continua transição para "tienda" */
+            14% { transform: translateY(0); opacity: 0.3; } /* Fade out antes de subir */
+            18% { transform: translateY(-118px); opacity: 0.3; } /* Transição mais lenta para "tienda" */
             20% { transform: translateY(-122px); opacity: 0.8; } /* Micro ajuste + fade in */
             22% { transform: translateY(-120px); opacity: 1; } /* Posição final + totalmente visível */
             34% { transform: translateY(-120px); opacity: 1; } /* Menos tempo parado */
-            36% { transform: translateY(-179px); opacity: 1; } /* Movimento começa, opacidade ainda total */
-            38% { transform: translateY(-238px); opacity: 0.3; } /* Fade out DEPOIS do movimento */
-            40% { transform: translateY(-238px); opacity: 0.3; } /* Continua transição para "lojinha" */
+            36% { transform: translateY(-120px); opacity: 0.3; } /* Fade out antes de subir */
+            40% { transform: translateY(-238px); opacity: 0.3; } /* Transição mais lenta para "lojinha" */
             42% { transform: translateY(-242px); opacity: 0.8; } /* Micro ajuste + fade in */
             44% { transform: translateY(-240px); opacity: 1; } /* Posição final + totalmente visível */
             56% { transform: translateY(-240px); opacity: 1; } /* Menos tempo parado */
-            58% { transform: translateY(-299px); opacity: 1; } /* Movimento começa, opacidade ainda total */
-            60% { transform: translateY(-358px); opacity: 0.3; } /* Fade out DEPOIS do movimento */
-            62% { transform: translateY(-358px); opacity: 0.3; } /* Continua transição para "mercado" */
+            58% { transform: translateY(-240px); opacity: 0.3; } /* Fade out antes de subir */
+            62% { transform: translateY(-358px); opacity: 0.3; } /* Transição mais lenta para "mercado" */
             64% { transform: translateY(-362px); opacity: 0.8; } /* Micro ajuste + fade in */
             66% { transform: translateY(-360px); opacity: 1; } /* Posição final + totalmente visível */
             78% { transform: translateY(-360px); opacity: 1; } /* Menos tempo parado */
-            80% { transform: translateY(-419px); opacity: 1; } /* Movimento começa, opacidade ainda total */
-            82% { transform: translateY(-478px); opacity: 0.3; } /* Fade out DEPOIS do movimento */
-            84% { transform: translateY(-478px); opacity: 0.3; } /* Continua transição para "negócio" no giro */
+            80% { transform: translateY(-360px); opacity: 0.3; } /* Fade out antes de subir */
+            84% { transform: translateY(-478px); opacity: 0.3; } /* Transição mais lenta para "negócio" no giro */
             86% { transform: translateY(-482px); opacity: 0.8; } /* Micro ajuste + fade in */
             88% { transform: translateY(-480px); opacity: 1; } /* Posição final + totalmente visível */
             89% { transform: translateY(-480px); opacity: 1; } /* FLASH rápido da segunda palavra negócio */
